--- a/source/sass/state/_states.scss
+++ b/source/sass/state/_states.scss
@@ -73,10 +73,10 @@
 
 .is-grid-view {
     .icon--grid {
-        &:before,
-        &:after,
-        span:before,
-        span:after {
+        background-color: $black;
+        border-radius: 2px;
+
+        span {
             display: none;
             }
     }
