--- a/template/layouts/index.html
+++ b/template/layouts/index.html
@@ -72,6 +72,14 @@
                     <span class="target--grid icon-wrap js-controller--grid">
                         <span class="icon icon--grid">
                             <span></span>
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                            <span></span>
                         </span>
                     </span>
                     <span class="target--nav icon-wrap js-controller--nav">
