--- a/template/layouts/index.html
+++ b/template/layouts/index.html
@@ -106,7 +106,7 @@
                             </a>
                         </li>
                         <li class="nav__menu__li nav__menu__tertiary">
-                            <span class="nav__menu__a js-controller--subscribe -grey p">Subscibe</span>
+                            <span class="nav__menu__a js-controller--subscribe -grey p">Subscribe</span>
                         </li>
                         <li v-for="social in socials" class="nav__menu__li nav__menu__tertiary">
                             <a href="{{social.data.url.value}}" class="nav__menu__a js-nav-item -grey p" target="_blank">{{social.data.title.value}}</a>
