Add PR Kit Download link to About.

--- a/source/sass/core/_typography.scss
+++ b/source/sass/core/_typography.scss
@@ -44,6 +44,9 @@
         color: $black;
         }
     }
+.a--darkline {
+    border-bottom: 1px solid $black;
+    }
 
 
 /******************************************************************************
