--- a/template/layouts/index.html
+++ b/template/layouts/index.html
@@ -432,6 +432,9 @@
                             <a href="{{social.data.url.value}}" class="a -grey" target="_blank">{{social.data.title.value}}</a>
                         </p>
                     </div>
+                    <div class="p -bump">
+                        <a href="{{meta.data.prkit.value.file.url}}" class="a a--darkline -dark" target="_blank">Download PR Kit</a>
+                    </div>
                     <div class="about__footer m -exp-t -grey">
                         <span>&copy; Index {{new Date().getFullYear()}}</span><span>All Images &copy; of their respective owners</span>
                     </div>
