Update Feature(s) text to Story(ies) in template.

--- a/template/layouts/index.html
+++ b/template/layouts/index.html
@@ -411,10 +411,10 @@
                     </div>
                 </div>
                 <a v-if="next" class="feature__next -text--center" href="/feature/{{next.uri}}/">
-                    <div class="h3">Next Feature</div>
+                    <div class="h3">Next Story</div>
                 </a>
                 <a v-else class="feature__next -text--center" href="/features/">
-                    <div class="h3">All Features</div>
+                    <div class="h3">All Stories</div>
                 </a>
             </article>
 
