--- a/source/sass/core/_typography.scss
+++ b/source/sass/core/_typography.scss
@@ -11,7 +11,14 @@
 *******************************************************************************/
 .p {
     @include p();
+
+    em {
+        @include em();
     }
+    strong {
+        @include strong();
+    }
+}
 .pup {
     margin-top: 20px;
     }
