fix link hover color for features. use medium-oblique for <em>s

--- a/source/sass/core/_typography.scss
+++ b/source/sass/core/_typography.scss
@@ -13,7 +13,7 @@
     @include p();
 
     em {
-        @include em();
+        @include font-sans-medium-oblique();
     }
     strong {
         @include strong();
